# devtools-mcp

./: .gitignore  ARCHITECTURE.md  HTTP_SERVER.md  PLATFORMS.md  README.md  ROADMAP.md  SETUP.md  pyproject.toml  start-http-server.sh
hooks/: pre-commit
src/devtools_mcp/: __init__.py  demo.py  server.py  xcode_control.py
src/devtools_mcp/audit/: __init__.py  core.py  design_system_audit.py  file_metadata_audit.py  localization_audit.py  swift_hygiene_audit.py
src/devtools_mcp/localization/: __init__.py  auditor.py  migrator.py  xcstrings.py
src/devtools_mcp/localization/scripts/: __init__.py  add_multiple_keys.py  audit_localization.py  check_existing_translations.py  copy_arabic_translations.py  find_old_format_keys.py
src/devtools_mcp/review/: __init__.py  reviewer.py
src/devtools_mcp/shared/: __init__.py
tests/: test_android.py  test_build_parsing.py  test_ci.py  test_copy_arabic.py  test_gateway.py  test_key_format.py  test_reviewer.py  test_search.py  test_strip_empty.py  test_xcstrings_io.py
