[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devtools-mcp"
version = "0.1.0"
description = "MCP server for full-stack development — Mobile, Web, and Server tooling"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
devtools-mcp = "devtools_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
